init: add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Generated files
 .idea/**/contentModel.xml
+build/
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -26,6 +27,7 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.gradle/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
